--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-    "version": 2,
-    "name": "ecommerce",
-    "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/server.js" }]
+}
